new_hls_component/new_hls_component/logs/hls_run_csim_8692.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/new_hls_component 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=lstm_new.cpp' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/lstm_new.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=updated_weights.cpp' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(13)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/updated_weights.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=weights_dimensions.h' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(14)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/weights_dimensions.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=new_updated_weights.h' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(15)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/new_updated_weights.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=lstm_new.h' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(16)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/lstm_new.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=block_circulant.cpp' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(17)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/block_circulant.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=block_circulant.h' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(18)
INFO: [HLS 200-10] Adding design file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/block_circulant.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=lstm_tb.cpp' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/lstm_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=lstm_function' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(11)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7k160tfbg676-2L' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7k160t-fbg676-2L'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=1ns' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 1ns.
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/Abbas_Sheik/Desktop/LSTM_FPGA/new_hls_component/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../lstm_tb.cpp in debug mode
   Compiling ../../../../block_circulant.cpp in debug mode
   Compiling ../../../../updated_weights.cpp in debug mode
   Compiling ../../../../lstm_new.cpp in debug mode
csim.mk:106: recipe for target 'obj/lstm_new.o' failed
In file included from ../../../../lstm_tb.cpp:1:
In file included from ../../../../lstm_new.h:4:
In file included from D:/xilinx/Vitis/2024.2/include/ap_fixed.h:9:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../block_circulant.cpp:1:
In file included from D:/xilinx/Vitis/2024.2/include/ap_fixed.h:9:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../updated_weights.cpp:3:
In file included from D:/xilinx/Vitis/2024.2/include/ap_fixed.h:9:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../lstm_new.cpp:2:
In file included from D:/xilinx/Vitis/2024.2/include/ap_fixed.h:9:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../lstm_new.cpp:63:5: error: no matching function for call to 'circulant_mvm'
    circulant_mvm(circulant_row, input, intermediate, rows);
    ^~~~~~~~~~~~~
../../../../block_circulant.h:13:6: note: candidate function not viable: 2nd argument ('const data_t *' (aka 'const ap_fixed<16, 8> *')) would lose const qualifier
void circulant_mvm(fixed_t circulant_row[], fixed_t input[], fixed_t output[], int size);
     ^
1 warning and 1 error generated.
make: *** [obj/lstm_new.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 2 seconds. Total elapsed time: 66.796 seconds; peak allocated memory: 162.797 MB.
